Fixed the ggarrange!

--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -235,7 +235,7 @@ ggplot(statevalues, aes(x = reorder(State, Count), y = Count, fill = ConcernAvg)
 
 ## Data Pitfalls
 
-```{r Viz 3 message = FALSE}
+```{r Viz 3, message = FALSE}
 ## John
 
 specieslargeviz <- speciesendanger %>% 
@@ -261,7 +261,7 @@ speciesabundanceviz <- speciesendanger %>%
 
 # Here is where the visualization begins!
 
-ggplot(speciesconservationviz, aes(x = "", y = perc, fill = reorder(`Conservation Status`, count), label = perc3)) +
+spc <- ggplot(speciesconservationviz, aes(x = "", y = perc, fill = reorder(`Conservation Status`, count), label = perc3)) +
   geom_bar(stat = "identity", width = 1, color = "white") + 
   coord_polar("y", start = 0) + 
   theme_void() + 
@@ -272,7 +272,7 @@ ggplot(speciesconservationviz, aes(x = "", y = perc, fill = reorder(`Conservatio
          title = "How Often Are Species Assigned Each Conservation Status?", 
          caption = "Overwhelmingly, species are placed in the 'Species of Concern' category,\nfar outweighing the next highest category: 'Endangered', at 6.8%.\nThis data excludes any species that are not given a category.\n(Including species not in danger of extinction).")
 
-ggplot(speciesabundanceviz, aes(x = "", y = count, fill = reorder(Abundance, count))) + 
+spa <- ggplot(speciesabundanceviz, aes(x = "", y = count, fill = reorder(Abundance, count))) + 
   geom_bar(stat = "identity", width = 1, color = "white") + 
   coord_polar("y", start = 0) + 
   theme_void() +
@@ -282,13 +282,20 @@ ggplot(speciesabundanceviz, aes(x = "", y = count, fill = reorder(Abundance, cou
        title = "How Often Are Species Assigned Each Abundance level?", 
        caption = "Where I had expected this data to show the same overwhelming trend in\n'Uncommon' species, it shows no overwhelming categorizations.\nLike the first graphic, this data set excludes species without\nAbundance levels, as well as those without Conservation Statuses,\nas the data we are analyzing regards primarily endangered species.")
 
-ggplot(speciesabundanceviz, aes(x = reorder(Abundance, -count), y = count, fill = Abundance)) + 
+spa2 <- ggplot(speciesabundanceviz, aes(x = reorder(Abundance, -count), y = count, fill = Abundance)) + 
   geom_bar(stat = "identity", show.legend = FALSE) +
   theme_classic() +
   scale_fill_manual(values = c("#84EE15", "#56EBD3", "#E4997F", "#A53460", "#99DEF9", "#284E37")) + 
   labs(x = "Abundance", 
        title = "A Clearer Look at Abundance Levels", 
        caption = "This graphic more clearly shows the actual trends in Abundance levels, using the same data as the previous graphic.")
+
+ggarrange(spc,
+          ggarrange(spa, spa2, ncol = 2, labels = c("B", "C")),
+          nrow = 2,
+          labels = "A")
+
+# This viz might look bad in rmarkdown, but in full screen it's actually pretty nice
 
 ```
 
@@ -432,7 +439,7 @@ m  # Print the map
 
 ```
 
-```{r VIZ 6 message = FALSE}
+```{r VIZ 6, message = FALSE}
 statevaluesmap <- statevalues %>% 
   full_join(states) %>% 
    mutate(state_name = str_to_lower(abbr2state(State)))
@@ -453,6 +460,7 @@ concernavg <- statevaluesmap %>%
     )
   ) +
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  labs(fill = "Avg. #\nSpecies of\nConcern") +
   theme_void()
 
 #Total Number of Species of Concern per State
@@ -467,6 +475,7 @@ concerncount <- statevaluesmap %>%
     )
   ) +
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  labs(fill = "Total Species\nof Concern") +
   theme_void()
 
 #Total Number of Parks per State
@@ -481,6 +490,7 @@ parkcount <- statevaluesmap %>%
     )
   ) +
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  labs(fill = "# of\nParks") +
   theme_void()
 
 #Percent of Species of Concern vs. Not of Concern per State
@@ -495,53 +505,13 @@ concernperc <- statevaluesmap_perc %>%
     )
   ) +
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  labs(fill = "Percent\nSpecies of\nConcern") +
   theme_void()
 
 ggarrange(
-  parkcount, concerncount, concernavg, ncol = 2, nrow = 2)
-)
+  parkcount, concerncount, concernavg, concernperc, ncol = 2, nrow = 2)
 
 ```
-
-concernavg <- statevaluesmap %>%
-  ggplot() +
-  geom_map(
-    map = fifty_states,
-    aes(
-      map_id = state_name,
-      fill = ConcernAvg
-    )
-  ) +
-  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
-  theme_void()
-
-concerncount <- statevaluesmap %>%
-  ggplot() +
-  geom_map(
-    map = fifty_states,
-    aes(
-      map_id = state_name,
-      fill = Concern
-    )
-  ) +
-  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
-  theme_void()
-
-parkcount <- statevaluesmap %>%
-  ggplot() +
-  geom_map(
-    map = fifty_states,
-    aes(
-      map_id = state_name,
-      fill = Count
-    )
-  ) +
-  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
-  theme_void()
-
-ggarrange(
-  parkcount, concerncount, concernavg, ncol = 2, nrow = 2)
-)
 
 ```{r}
 tommything <- speciesnewabundance %>% 
