--- a/National-Parks-Report.Rmd
+++ b/National-Parks-Report.Rmd
@@ -43,8 +43,33 @@ library(readr)
 states <- read_csv("Biodiversity/states.csv")
 ```
 
+```{r Key Data Set Variations, include = FALSE}
+speciesendanger <- species %>% 
+  filter(!is.na(`Conservation Status`), Occurrence != "Not Confirmed") %>% 
+  filter(!Abundance %in% c("Native", "Not Native"))
+
+speciesabundance <- species %>% 
+  filter(!is.na(Abundance)) %>% 
+  filter(!Abundance %in% c("Native", "Not Native")) %>% 
+  group_by(Abundance, `Conservation Status`) %>% 
+  summarize(count = n()) %>% 
+  filter(`Conservation Status` == "Species of Concern")
+
+speciesnew <- species %>% 
+  filter(Occurrence != "Not Confirmed", 
+         !Abundance %in% c("Native", "Not Native"), 
+         !`Conservation Status` %in% c("Under Review", "In Recovery", "Extinct")) %>% 
+  mutate(`Conservation Status` = case_when(`Conservation Status` %in% c("Species of Concern", "Endangered", "Threatened", "Proposed Threatened", "Proposed Endangered") ~ "Species of Concern")) %>% 
+  mutate(`Conservation Status` = replace_na(`Conservation Status`, "Not of Concern"))
+```
+
+# Our Big Question
+When we first looked at the ["Biodiversity in National Parks"](https://www.kaggle.com/datasets/nationalparkservice/park-biodiversity) data set, we were drawn to a variable stating each species's conservation status. We thought to ourselves, how many of these species are of concern? Are certain parks doing worse than others? Are certain states? Eventually, we decided on a question to focus on:
+
+> Is there any state that needs more support in conserving its national parks' wildlife than others?  
+
 # America's National Parks
-There are 63 congressionally delegated national parks in the United States as of 2022, each an area of lanf protected by the National Park Service. The data set we used for this project only focuses on 56 of these national parks. Some of these are excluded because the data set was uploaded to the repository in 2016, before several of them were established. Others are excluded because the data set focuses only on national parks in the United States and not on those in the territories. The 56 national parks that are included in the ["Biodiversity in National Parks"](https://www.kaggle.com/datasets/nationalparkservice/park-biodiversity) data set are mapped out here:  
+There are 63 congressionally delegated national parks in the United States as of 2022, each an area of land protected by the National Park Service. The data set we used for this project only focuses on 56 of these national parks. Some of these are excluded because the data set was uploaded to the repository in 2016, before several of them were established. Others are excluded because the data set focuses only on national parks in the United States and not on those in the territories. The 56 national parks that are included in the data set are mapped out here:  
 
 ```{r echo = FALSE}
 # Because of the nature of leaflet, we had to manually insert each of the National Parks by hand
@@ -110,7 +135,8 @@ m <- leaflet() %>%
   
 m  # Print the map
 ```  
-This data set shows off the immense biodiversity in these national parks, with over forty thousand unique species of plants and animals found across all 56 of the parks. Overwhelmingly, the species recorded by the National Park Service are plants, as shown below:
+
+This data set shows off the immense biodiversity in these national parks, with over forty thousand unique species of plants and animals found across all 56 of the parks. Overwhelmingly, the species recorded by the National Park Service are plants, as shown below:  
 
 ```{r echo = FALSE, message = FALSE}
 speciesnewabundance2 <- speciesnew %>% 
@@ -127,7 +153,7 @@ speciesnewabundance2 %>% group_by(Category) %>%
   labs(y = " ", x = "Total Count") +
 
   # Hereafter are the theme details
-
+  
   # Making the background
   theme(panel.background = element_rect(fill = "white", 
                                         colour = "white", 
@@ -139,13 +165,8 @@ speciesnewabundance2 %>% group_by(Category) %>%
         panel.grid.minor = element_line(linewidth = 0.25, 
                                         linetype = 'solid',
                                         colour = "white")) +
-  
-  # Changing the legend
-  guides(fill = guide_legend(title.position = "top", 
-                             title = "Level of Concern")) + 
-  
   # Giving it a title
-  labs(title = "Plant and Animal Types in National Parks") +
+  labs(title = "Plant and Animal Types") +
   
   # Affecting text attributes
   theme(axis.text.y = element_text(color = "grey27"),
@@ -160,17 +181,7 @@ speciesnewabundance2 %>% group_by(Category) %>%
                                      hjust = 0.5, 
                                      color = "grey27"), 
         plot.caption = element_text(face = "italic", 
-                                    color = "grey27"),
-        
-        # Affecting legend attributes
-        legend.position = "right", 
-        legend.justification = "left", 
-        plot.background = element_rect(fill ="peachpuff"), 
-        legend.background = element_rect(fill ="white"), 
-        legend.text = element_text(face="italic", 
-                                   color = "grey27"), 
-        legend.title = element_text(color = "grey27", 
-                                    face = "bold")) +
+                                    color = "grey27")) + 
   
   # Affecting axis text attributes
   theme(axis.title.y=element_text(colour="grey27", 
@@ -178,4 +189,15 @@ speciesnewabundance2 %>% group_by(Category) %>%
   theme(axis.title.x=element_text(colour="grey27", 
                                    face = "bold"))
 
-```
+```  
+
+What this graph represents is the presence of a certain category of species in a park. Some of the species appear more than once (certain types of trees are going to be present in almost all of the parks!), which brings the total over the number of unique species.  
+
+Something easily noticed in this graph is that the category "Vascular Plants" is represented overwhelmingly more than the other categories of species. Because this category includes ferns, flowers, and (you guessed it) trees, it is bound to be the highest category. Not only are there lots of trees in national parks, there are often lots of different types of trees! Conservation organizations like the IUCN or the National Parks Services often focus their efforts of maintaining biodiversity in trees and other vascular plants, so it only makes sense that there are so many represented here.  
+
+Because there are so many species of vascular plant in the data set, we had to remove them from certain data sets so that we could look more closely at trends.
+
+# How Conservation Efforts Happen
+
+# Grouping Issues
+
